Aptoide 4.2.0 beta 2
git-svn-id: http://aptoide.org/repo/aptoide-client@1388 8d55eb69-6847-4b75-98a7-935b3913b0ec